# AIAssistant

./: .gitignore  AIAssistant.qrc  CMakeLists.txt  ChatDialog.cpp  ChatDialog.h  logo.rc  main.cpp  version.rc  version.rc.in
AIAssistantPage/: index.html  lang.js  main.js  style.css
base/: BorderContainer.cpp  BorderContainer.h  ChatSwitchButton.cpp  ChatSwitchButton.h  ChatWidgetTitleBar.cpp  ChatWidgetTitleBar.h
chat/: ChatBaseManger.cpp  ChatBaseManger.h  ChatbaseHttpRequest.cpp  ChatbaseHttpRequest.h
lang/: LanguageMgr.cpp  LanguageMgr.h
pipe/: AIAssistant.pipeMsg.pb.cc  AIAssistant.pipeMsg.pb.h  AIAssistant.pipeMsg.proto  PipeManager.cpp  PipeManager.h  PipeMessage.cpp  pipeMessage.h
protobuf/lib/: abseil_test_dll.lib  absl_flags_commandlineflag.lib  absl_flags_commandlineflag_internal.lib  absl_flags_config.lib  absl_flags_internal.lib  absl_flags_marshalling.lib  absl_flags_parse.lib  absl_flags_private_handle_accessor.lib  absl_flags_program_name.lib  absl_flags_reflection.lib  absl_flags_usage.lib  absl_flags_usage_internal.lib  absl_log_flags.lib  absl_log_internal_fnmatch.lib  absl_string_view.lib  absl_vlog_config_internal.lib  libupbd.lib  utf8_range.lib  utf8_validity.lib
protobuf/lib/cmake/absl/: abslTargets-debug.cmake  abslTargets.cmake
protobuf/lib/cmake/protobuf/: protobuf-config-version.cmake  protobuf-targets-debug.cmake  protobuf-targets.cmake
protobuf/lib/cmake/utf8_range/: utf8_range-targets-debug.cmake  utf8_range-targets.cmake
protobuf/lib/pkgconfig/: abseil_dll.pc  abseil_test_dll.pc  absl_absl_check.pc  absl_absl_log.pc  absl_absl_vlog_is_on.pc  absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_btree.pc  absl_charset.pc  absl_check.pc  absl_city.pc  absl_civil_time.pc  absl_cleanup.pc  absl_cleanup_internal.pc  absl_common_policy_traits.pc  absl_compare.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_common.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  absl_cord_test_helpers.pc  absl_cordz_functions.pc  absl_cordz_handle.pc  absl_cordz_info.pc  absl_cordz_sample_token.pc  absl_cordz_statistics.pc  absl_cordz_update_scope.pc  (+156 more)
skin/: AIAssistant.qss
utils/: AIAssistant.pipeMsg.pb.cc  AIAssistant.pipeMsg.pb.h  AIAssistant.pipeMsg.proto  JsonConfig.cpp  JsonConfig.h  RevoScanConfig.cpp  RevoScanConfig.h
